<resources>
    <string name="app_name">News Feed</string>
    <string name="skip_signin">Skip SignIn</string>
    <string name="handle_signin_log">handleSignInResult:</string>
    <string name="loading">Loading ...</string>
    <string name="unable_to_signin">Unable to Sign In</string>
    <string name="exception">this should only be called when the cursor is valid</string>
    <string name="image">News image</string>
    <string name="heading">News Heading</string>
    <string name="description">News Description</string>
    <string name="powered_by_piyush_gupta">Powered by Piyush Gupta</string>
    <string name="share">Share</string>
    <string name="invitation_title">Invitation to download News Feed</string>
    <string name="invitation_message">Hey, check out this cool App!</string>
    <string name="invitation_cta">Install!</string>
    <string name="shared_element_name" />
    <string name="unable_to_connect">Unable to Connect...</string>
</resources>
