<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="200dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    android:paddingBottom="5dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="6"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:scaleType="centerCrop"
                android:layout_margin="5dp"
                android:contentDescription="@string/image"
                android:layout_height="match_parent"
                android:id="@+id/thumbnail" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:padding="5dp"
                android:maxLines="10"
                android:layout_weight="4"
                android:id="@+id/heading"
                android:contentDescription="@string/heading"
                android:textColor="@color/black"
                android:text="@string/heading" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="11sp"
                android:padding="5dp"
                android:layout_weight="2"
                android:id="@+id/description"
                android:contentDescription="@string/description"
                android:textColor="@color/black"
                android:text="@string/description" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
