<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/viewA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/news_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:transitionName="@string/shared_element_name"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewB"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:background="#ffffff"
            android:orientation="vertical">

            <TextView
                android:id="@+id/news_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/news_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_13dp"
                android:paddingLeft="@dimen/dimen_10dp"
                android:paddingRight="@dimen/dimen_10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/dimen_10dp"
                android:textSize="@dimen/dimen_13dp"
                android:text="@string/powered_by_piyush_gupta" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"></LinearLayout>

            <Button
                android:id="@+id/share_news"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_30dp"
                android:layout_gravity="right|center"
                android:layout_margin="@dimen/dimen_10dp"
                android:layout_weight="1"
                android:background="@drawable/button_prop"
                android:text="@string/share"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>